Called additional libraries required to run the markdown file successfully

--- a/root/scenario/model/code/swimr/compare_scenario.Rmd
+++ b/root/scenario/model/code/swimr/compare_scenario.Rmd
@@ -29,8 +29,10 @@ opts_chunk$set(
   fig.keep = TRUE, fig.path = params$fig.path,
   fig.width=8, fig.height=6
 )
-library(RSQLite)
+library(methods)
 library(tidyverse)
+library(DT)
+library(RSQLite)
 library(leaflet)
 library(swimr)
 ```
